fixed description alignment

--- a/src/styles/_single-post-styles.scss
+++ b/src/styles/_single-post-styles.scss
@@ -39,8 +39,6 @@
   &__right-box {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin-top: 32px;
     max-width: 42%;
   }
